--- a/index.html
+++ b/index.html
@@ -20,6 +20,11 @@
             <button class="bg-emerald-800  font-medium  text-white  px-8 py-3  rounded-lg  hover:bg-teal-700  "  id="submit-button"> Submit </button>
            </div>
         </div>
+        <div class="bg-emerald-600  py-6  font-medium  text-white pl-10">
+            <h1 class="text-3xl mb-3"> For Login Use This </h1>
+            <h2> user email : admin@admin.com</h2>
+            <h2> User password : pass</h2>
+        </div>
     <script src="login.js"></script>
 </body>
 </html>
